Assignment4/y.output
State 248 conflicts: 13 shift/reduce
State 283 conflicts: 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 primary_expression: IDENTIFIER
    4                   | INTEGER_CONSTANT
    5                   | FLOATING_CONSTANT
    6                   | CHARACTER_CONSTANT
    7                   | ZERO_CONSTANT
    8                   | STRING_LITERAL
    9                   | '(' expression ')'

   10 postfix_expression: primary_expression
   11                   | postfix_expression '[' expression ']' '[' expression ']'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression '(' ')'
   14                   | postfix_expression '.' IDENTIFIER
   15                   | postfix_expression ARROW IDENTIFIER
   16                   | postfix_expression PLUS_PLUS
   17                   | postfix_expression MINUS_MINUS
   18                   | postfix_expression NEW

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list ',' assignment_expression

   21 unary_expression: postfix_expression
   22                 | PLUS_PLUS unary_expression
   23                 | MINUS_MINUS unary_expression
   24                 | unary_operator cast_expression

   25 unary_operator: '&'
   26               | '*'
   27               | '+'
   28               | '-'

   29 cast_expression: unary_expression

   30 multiplicative_expression: cast_expression
   31                          | multiplicative_expression '*' cast_expression
   32                          | multiplicative_expression '/' cast_expression
   33                          | multiplicative_expression '%' cast_expression

   34 additive_expression: multiplicative_expression
   35                    | additive_expression '+' multiplicative_expression
   36                    | additive_expression '-' multiplicative_expression

   37 shift_expression: additive_expression
   38                 | shift_expression LEFT_SHIFT additive_expression
   39                 | shift_expression RIGHTSH additive_expression

   40 relational_expression: shift_expression
   41                      | relational_expression '<' shift_expression
   42                      | relational_expression '>' shift_expression
   43                      | relational_expression LE shift_expression
   44                      | relational_expression GE shift_expression

   45 equality_expression: relational_expression
   46                    | equality_expression ET relational_expression
   47                    | equality_expression NE relational_expression

   48 and_expression: equality_expression
   49               | and_expression '&' equality_expression

   50 exclusive_or_expression: and_expression
   51                        | exclusive_or_expression POW and_expression

   52 inclusive_or_expression: exclusive_or_expression
   53                        | inclusive_or_expression OR exclusive_or_expression

   54 logical_and_expression: inclusive_or_expression
   55                       | logical_and_expression N DAND M inclusive_or_expression N

   56 logical_or_expression: logical_and_expression
   57                      | logical_or_expression N DOR M logical_and_expression N

   58 conditional_expression: logical_or_expression
   59                       | logical_or_expression N QM M expression N COL M conditional_expression

   60 assignment_expression: conditional_expression
   61                      | unary_expression assignment_operator assignment_expression

   62 assignment_operator: ASSIGN
   63                    | MULTA
   64                    | DIVA
   65                    | REMA
   66                    | PLUSA
   67                    | MINUSA
   68                    | LSA
   69                    | RSA
   70                    | ANDA
   71                    | POWA
   72                    | ORA

   73 expression: assignment_expression
   74           | expression ',' assignment_expression

   75 constant_expression: conditional_expression

   76 declaration: declaration_specifiers SCOL
   77            | declaration_specifiers init_declarator_list SCOL

   78 declaration_specifiers: type_specifiers declaration_specifiers_opt

   79 declaration_specifiers_opt: %empty
   80                           | declaration_specifiers

   81 init_declarator_list: init_declarator
   82                     | init_declarator_list ',' init_declarator

   83 init_declarator: declarator
   84                | declarator ASSIGN initializer

   85 type_specifiers: VOID
   86                | CHAR
   87                | SHORT
   88                | INT
   89                | LONG
   90                | FLOAT
   91                | DOUBLE
   92                | MATRIX
   93                | SIGNED
   94                | UNSIGNED
   95                | BOOL

   96 declarator: direct_declarator
   97           | pointer direct_declarator

   98 direct_declarator: IDENTIFIER
   99                  | '(' declarator ')'
  100                  | direct_declarator '[' ']'
  101                  | direct_declarator '[' assignment_expression ']' '[' assignment_expression ']'
  102                  | direct_declarator '(' parameter_type_list ')'
  103                  | direct_declarator '(' ')'
  104                  | direct_declarator '(' identifier_list ')'

  105 pointer: '*'
  106        | '*' pointer

  107 parameter_type_list: parameter_list

  108 parameter_list: parameter_declaration
  109               | parameter_list ',' parameter_declaration

  110 parameter_declaration: declaration_specifiers declarator
  111                      | declaration_specifiers

  112 identifier_list: IDENTIFIER
  113                | identifier_list ',' IDENTIFIER

  114 initializer: assignment_expression
  115            | LEFT_CURL initializer_row_list RCB

  116 initializer_row_list: initializer_row
  117                     | initializer_row_list SCOL initializer_row

  118 initializer_row: initializer
  119                | designation initializer
  120                | initializer_row ',' initializer
  121                | initializer_row ',' designation initializer

  122 designation: designator_list ASSIGN

  123 designator_list: designator
  124                | designator_list designator

  125 designator: '[' constant_expression ']'
  126           | '.' IDENTIFIER

  127 statement: labeled_statement
  128          | compound_statement
  129          | expression_statement
  130          | selection_statement
  131          | iteration_statement
  132          | jump_statement

  133 labeled_statement: IDENTIFIER COL statement
  134                  | CASE constant_expression COL statement
  135                  | DEFAULT COL statement

  136 compound_statement: LEFT_CURL RCB
  137                   | LEFT_CURL block_item_list RCB

  138 block_item_list: block_item
  139                | block_item_list M block_item

  140 block_item: declaration
  141           | statement

  142 expression_statement: SCOL
  143                     | expression SCOL

  144 selection_statement: IF '(' expression ')' M statement
  145                    | IF '(' expression ')' M statement N ELSE M statement
  146                    | SWITCH '(' expression ')' statement

  147 iteration_statement: WHILE M '(' expression ')' M statement
  148                    | DO M statement M WHILE '(' expression ')'
  149                    | FOR '(' expression SCOL M expression N SCOL M expression N ')' M statement
  150                    | FOR '(' SCOL expression SCOL expression ')' statement
  151                    | FOR '(' expression SCOL SCOL expression ')' statement
  152                    | FOR '(' expression SCOL expression SCOL ')' statement
  153                    | FOR '(' SCOL SCOL expression ')' statement
  154                    | FOR '(' expression SCOL SCOL ')' statement
  155                    | FOR '(' SCOL expression SCOL ')' statement
  156                    | FOR '(' SCOL SCOL ')' statement
  157                    | FOR '(' declaration expression SCOL expression ')' statement
  158                    | FOR '(' declaration SCOL expression ')' statement
  159                    | FOR '(' declaration expression SCOL ')' statement
  160                    | FOR '(' declaration SCOL ')' statement

  161 jump_statement: GOTO IDENTIFIER SCOL
  162               | CONTINUE SCOL
  163               | BREAK SCOL
  164               | RETURN SCOL
  165               | RETURN expression SCOL

  166 translation_unit: external_decalaration
  167                 | translation_unit external_decalaration

  168 external_decalaration: function_definition
  169                      | declaration

  170 function_definition: declaration_specifiers declarator compound_statement
  171                    | declaration_specifiers declarator declaration_list compound_statement

  172 declaration_list: declaration
  173                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'%' (37) 33
'&' (38) 25 49
'(' (40) 9 12 13 99 102 103 104 144 145 146 147 148 149 150 151 152
    153 154 155 156 157 158 159 160
')' (41) 9 12 13 99 102 103 104 144 145 146 147 148 149 150 151 152
    153 154 155 156 157 158 159 160
'*' (42) 26 31 105 106
'+' (43) 27 35
',' (44) 20 74 82 109 113 120 121
'-' (45) 28 36
'.' (46) 14 126
'/' (47) 32
'<' (60) 41
'>' (62) 42
'[' (91) 11 100 101 125
']' (93) 11 100 101 125
error (256)
IDENTIFIER (258) 3 14 15 98 112 113 126 133 161
STRING_LITERAL (259) 8
INTEGER_CONSTANT (260) 4
FLOATING_CONSTANT (261) 5
CHARACTER_CONSTANT (262) 6
ZERO_CONSTANT (263) 7
LEFT_CURL (264) 115 136 137
RCB (265) 115 136 137
ARROW (266) 15
PLUS_PLUS (267) 16 22
MINUS_MINUS (268) 17 23
NEW (269) 18
LEFT_SHIFT (270) 38
RIGHTSH (271) 39
LE (272) 43
GE (273) 44
ET (274) 46
NE (275) 47
DAND (276) 55
DOR (277) 57
QM (278) 59
COL (279) 59 133 134 135
POW (280) 51
OR (281) 53
SCOL (282) 76 77 117 142 143 149 150 151 152 153 154 155 156 157 158
    159 160 161 162 163 164 165
ASSIGN (283) 62 84 122
MULTA (284) 63
DIVA (285) 64
REMA (286) 65
POWA (287) 71
PLUSA (288) 66
MINUSA (289) 67
LSA (290) 68
RSA (291) 69
ANDA (292) 70
ORA (293) 72
BREAK (294) 163
VOID (295) 85
CHAR (296) 86
INT (297) 88
FLOAT (298) 90
SHORT (299) 87
LONG (300) 89
UNSIGNED (301) 94
SIGNED (302) 93
RETURN (303) 164 165
IF (304) 144 145
DO (305) 148
SWITCH (306) 146
GOTO (307) 161
CASE (308) 134
FOR (309) 149 150 151 152 153 154 155 156 157 158 159 160
WHILE (310) 147 148
BOOL (311) 95
CONTINUE (312) 162
DEFAULT (313) 135
ELSE (314) 145
MATRIX (315) 92
DOUBLE (316) 91


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
M (77)
    on left: 1, on right: 55 57 59 139 144 145 147 148 149
N (78)
    on left: 2, on right: 55 57 59 145 149
primary_expression (79)
    on left: 3 4 5 6 7 8 9, on right: 10
postfix_expression (80)
    on left: 10 11 12 13 14 15 16 17 18, on right: 11 12 13 14 15 16
    17 18 21
argument_expression_list (81)
    on left: 19 20, on right: 12 20
unary_expression (82)
    on left: 21 22 23 24, on right: 22 23 29 61
unary_operator (83)
    on left: 25 26 27 28, on right: 24
cast_expression (84)
    on left: 29, on right: 24 30 31 32 33
multiplicative_expression (85)
    on left: 30 31 32 33, on right: 31 32 33 34 35 36
additive_expression (86)
    on left: 34 35 36, on right: 35 36 37 38 39
shift_expression (87)
    on left: 37 38 39, on right: 38 39 40 41 42 43 44
relational_expression (88)
    on left: 40 41 42 43 44, on right: 41 42 43 44 45 46 47
equality_expression (89)
    on left: 45 46 47, on right: 46 47 48 49
and_expression (90)
    on left: 48 49, on right: 49 50 51
exclusive_or_expression (91)
    on left: 50 51, on right: 51 52 53
inclusive_or_expression (92)
    on left: 52 53, on right: 53 54 55
logical_and_expression (93)
    on left: 54 55, on right: 55 56 57
logical_or_expression (94)
    on left: 56 57, on right: 57 58 59
conditional_expression (95)
    on left: 58 59, on right: 59 60 75
assignment_expression (96)
    on left: 60 61, on right: 19 20 61 73 74 101 114
assignment_operator (97)
    on left: 62 63 64 65 66 67 68 69 70 71 72, on right: 61
expression (98)
    on left: 73 74, on right: 9 11 59 74 143 144 145 146 147 148 149
    150 151 152 153 154 155 157 158 159 165
constant_expression (99)
    on left: 75, on right: 125 134
declaration (100)
    on left: 76 77, on right: 140 157 158 159 160 169 172 173
declaration_specifiers (101)
    on left: 78, on right: 76 77 80 110 111 170 171
declaration_specifiers_opt (102)
    on left: 79 80, on right: 78
init_declarator_list (103)
    on left: 81 82, on right: 77 82
init_declarator (104)
    on left: 83 84, on right: 81 82
type_specifiers (105)
    on left: 85 86 87 88 89 90 91 92 93 94 95, on right: 78
declarator (106)
    on left: 96 97, on right: 83 84 99 110 170 171
direct_declarator (107)
    on left: 98 99 100 101 102 103 104, on right: 96 97 100 101 102
    103 104
pointer (108)
    on left: 105 106, on right: 97 106
parameter_type_list (109)
    on left: 107, on right: 102
parameter_list (110)
    on left: 108 109, on right: 107 109
parameter_declaration (111)
    on left: 110 111, on right: 108 109
identifier_list (112)
    on left: 112 113, on right: 104 113
initializer (113)
    on left: 114 115, on right: 84 118 119 120 121
initializer_row_list (114)
    on left: 116 117, on right: 115 117
initializer_row (115)
    on left: 118 119 120 121, on right: 116 117 120 121
designation (116)
    on left: 122, on right: 119 121
designator_list (117)
    on left: 123 124, on right: 122 124
designator (118)
    on left: 125 126, on right: 123 124
statement (119)
    on left: 127 128 129 130 131 132, on right: 133 134 135 141 144
    145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160
labeled_statement (120)
    on left: 133 134 135, on right: 127
compound_statement (121)
    on left: 136 137, on right: 128 170 171
block_item_list (122)
    on left: 138 139, on right: 137 139
block_item (123)
    on left: 140 141, on right: 138 139
expression_statement (124)
    on left: 142 143, on right: 129
selection_statement (125)
    on left: 144 145 146, on right: 130
iteration_statement (126)
    on left: 147 148 149 150 151 152 153 154 155 156 157 158 159 160,
    on right: 131
jump_statement (127)
    on left: 161 162 163 164 165, on right: 132
translation_unit (128)
    on left: 166 167, on right: 0 167
external_decalaration (129)
    on left: 168 169, on right: 166 167
function_definition (130)
    on left: 170 171, on right: 168
declaration_list (131)
    on left: 172 173, on right: 171 173


State 0

    0 $accept: . translation_unit $end

    VOID      shift, and go to state 1
    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    FLOAT     shift, and go to state 4
    SHORT     shift, and go to state 5
    LONG      shift, and go to state 6
    UNSIGNED  shift, and go to state 7
    SIGNED    shift, and go to state 8
    BOOL      shift, and go to state 9
    MATRIX    shift, and go to state 10
    DOUBLE    shift, and go to state 11

    declaration             go to state 12
    declaration_specifiers  go to state 13
    type_specifiers         go to state 14
    translation_unit        go to state 15
    external_decalaration   go to state 16
    function_definition     go to state 17


State 1

   85 type_specifiers: VOID .

    $default  reduce using rule 85 (type_specifiers)


State 2

   86 type_specifiers: CHAR .

    $default  reduce using rule 86 (type_specifiers)


State 3

   88 type_specifiers: INT .

    $default  reduce using rule 88 (type_specifiers)


State 4

   90 type_specifiers: FLOAT .

    $default  reduce using rule 90 (type_specifiers)


State 5

   87 type_specifiers: SHORT .

    $default  reduce using rule 87 (type_specifiers)


State 6

   89 type_specifiers: LONG .

    $default  reduce using rule 89 (type_specifiers)


State 7

   94 type_specifiers: UNSIGNED .

    $default  reduce using rule 94 (type_specifiers)


State 8

   93 type_specifiers: SIGNED .

    $default  reduce using rule 93 (type_specifiers)


State 9

   95 type_specifiers: BOOL .

    $default  reduce using rule 95 (type_specifiers)


State 10

   92 type_specifiers: MATRIX .

    $default  reduce using rule 92 (type_specifiers)


State 11

   91 type_specifiers: DOUBLE .

    $default  reduce using rule 91 (type_specifiers)


State 12

  169 external_decalaration: declaration .

    $default  reduce using rule 169 (external_decalaration)


State 13

   76 declaration: declaration_specifiers . SCOL
   77            | declaration_specifiers . init_declarator_list SCOL
  170 function_definition: declaration_specifiers . declarator compound_statement
  171                    | declaration_specifiers . declarator declaration_list compound_statement

    IDENTIFIER  shift, and go to state 18
    SCOL        shift, and go to state 19
    '('         shift, and go to state 20
    '*'         shift, and go to state 21

    init_declarator_list  go to state 22
    init_declarator       go to state 23
    declarator            go to state 24
    direct_declarator     go to state 25
    pointer               go to state 26


State 14

   78 declaration_specifiers: type_specifiers . declaration_specifiers_opt

    VOID      shift, and go to state 1
    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    FLOAT     shift, and go to state 4
    SHORT     shift, and go to state 5
    LONG      shift, and go to state 6
    UNSIGNED  shift, and go to state 7
    SIGNED    shift, and go to state 8
    BOOL      shift, and go to state 9
    MATRIX    shift, and go to state 10
    DOUBLE    shift, and go to state 11

    $default  reduce using rule 79 (declaration_specifiers_opt)

    declaration_specifiers      go to state 27
    declaration_specifiers_opt  go to state 28
    type_specifiers             go to state 14


State 15

    0 $accept: translation_unit . $end
  167 translation_unit: translation_unit . external_decalaration

    $end      shift, and go to state 29
    VOID      shift, and go to state 1
    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    FLOAT     shift, and go to state 4
    SHORT     shift, and go to state 5
    LONG      shift, and go to state 6
    UNSIGNED  shift, and go to state 7
    SIGNED    shift, and go to state 8
    BOOL      shift, and go to state 9
    MATRIX    shift, and go to state 10
    DOUBLE    shift, and go to state 11

    declaration             go to state 12
    declaration_specifiers  go to state 13
    type_specifiers         go to state 14
    external_decalaration   go to state 30
    function_definition     go to state 17


State 16

  166 translation_unit: external_decalaration .

    $default  reduce using rule 166 (translation_unit)


State 17

  168 external_decalaration: function_definition .

    $default  reduce using rule 168 (external_decalaration)


State 18

   98 direct_declarator: IDENTIFIER .

    $default  reduce using rule 98 (direct_declarator)


State 19

   76 declaration: declaration_specifiers SCOL .

    $default  reduce using rule 76 (declaration)


State 20

   99 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 18
    '('         shift, and go to state 20
    '*'         shift, and go to state 21

    declarator         go to state 31
    direct_declarator  go to state 25
    pointer            go to state 26


State 21

  105 pointer: '*' .
  106        | '*' . pointer

    '*'  shift, and go to state 21

    $default  reduce using rule 105 (pointer)

    pointer  go to state 32


State 22

   77 declaration: declaration_specifiers init_declarator_list . SCOL
   82 init_declarator_list: init_declarator_list . ',' init_declarator

    SCOL  shift, and go to state 33
    ','   shift, and go to state 34


State 23

   81 init_declarator_list: init_declarator .

    $default  reduce using rule 81 (init_declarator_list)


State 24

   83 init_declarator: declarator .
   84                | declarator . ASSIGN initializer
  170 function_definition: declaration_specifiers declarator . compound_statement
  171                    | declaration_specifiers declarator . declaration_list compound_statement

    LEFT_CURL  shift, and go to state 35
    ASSIGN     shift, and go to state 36
    VOID       shift, and go to state 1
    CHAR       shift, and go to state 2
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    SHORT      shift, and go to state 5
    LONG       shift, and go to state 6
    UNSIGNED   shift, and go to state 7
    SIGNED     shift, and go to state 8
    BOOL       shift, and go to state 9
    MATRIX     shift, and go to state 10
    DOUBLE     shift, and go to state 11

    $default  reduce using rule 83 (init_declarator)

    declaration             go to state 37
    declaration_specifiers  go to state 38
    type_specifiers         go to state 14
    compound_statement      go to state 39
    declaration_list        go to state 40


State 25

   96 declarator: direct_declarator .
  100 direct_declarator: direct_declarator . '[' ']'
  101                  | direct_declarator . '[' assignment_expression ']' '[' assignment_expression ']'
  102                  | direct_declarator . '(' parameter_type_list ')'
  103                  | direct_declarator . '(' ')'
  104                  | direct_declarator . '(' identifier_list ')'

    '('  shift, and go to state 41
    '['  shift, and go to state 42

    $default  reduce using rule 96 (declarator)


State 26

   97 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 18
    '('         shift, and go to state 20

    direct_declarator  go to state 43


State 27

   80 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 80 (declaration_specifiers_opt)


State 28

   78 declaration_specifiers: type_specifiers declaration_specifiers_opt .

    $default  reduce using rule 78 (declaration_specifiers)


State 29

    0 $accept: translation_unit $end .

    $default  accept


State 30

  167 translation_unit: translation_unit external_decalaration .

    $default  reduce using rule 167 (translation_unit)


State 31

   99 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 44


State 32

  106 pointer: '*' pointer .

    $default  reduce using rule 106 (pointer)


State 33

   77 declaration: declaration_specifiers init_declarator_list SCOL .

    $default  reduce using rule 77 (declaration)


State 34

   82 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 18
    '('         shift, and go to state 20
    '*'         shift, and go to state 21

    init_declarator    go to state 45
    declarator         go to state 46
    direct_declarator  go to state 25
    pointer            go to state 26


State 35

  136 compound_statement: LEFT_CURL . RCB
  137                   | LEFT_CURL . block_item_list RCB

    IDENTIFIER          shift, and go to state 47
    STRING_LITERAL      shift, and go to state 48
    INTEGER_CONSTANT    shift, and go to state 49
    FLOATING_CONSTANT   shift, and go to state 50
    CHARACTER_CONSTANT  shift, and go to state 51
    ZERO_CONSTANT       shift, and go to state 52
    LEFT_CURL           shift, and go to state 35
    RCB                 shift, and go to state 53
    PLUS_PLUS           shift, and go to state 54
    MINUS_MINUS         shift, and go to state 55
    SCOL                shift, and go to state 56
    BREAK               shift, and go to state 57
    VOID                shift, and go to state 1
    CHAR                shift, and go to state 2
    INT                 shift, and go to state 3
    FLOAT               shift, and go to state 4
    SHORT               shift, and go to state 5
    LONG                shift, and go to state 6
    UNSIGNED            shift, and go to state 7
    SIGNED              shift, and go to state 8
    RETURN              shift, and go to state 58
    IF                  shift, and go to state 59
    DO                  shift, and go to state 60
    SWITCH              shift, and go to state 61
    GOTO                shift, and go to state 62
    CASE                shift, and go to state 63
    FOR                 shift, and go to state 64
    WHILE               shift, and go to state 65
    BOOL                shift, and go to state 9
    CONTINUE            shift, and go to state 66
    DEFAULT             shift, and go to state 67
    MATRIX              shift, and go to state 10
    DOUBLE              shift, and go to state 11
    '('                 shift, and go to state 68
    '&'                 shift, and go to state 69
    '*'                 shift, and go to state 70
    '+'                 shift, and go to state 71
    '-'                 shift, and go to state 72

    primary_expression         go to state 73
    postfix_expression         go to state 74
    unary_expression           go to state 75
    unary_operator             go to state 76
    cast_expression            go to state 77
    multiplicative_expression  go to state 78
    additive_expression        go to state 79
    shift_expression           go to state 80
    relational_expression      go to state 81
    equality_expression        go to state 82
    and_expression             go to state 83
    exclusive_or_expression    go to state 84
    inclusive_or_expression    go to state 85
    logical_and_expression     go to state 86
    logical_or_expression      go to state 87
    conditional_expression     go to state 88
    assignment_expression      go to state 89
    expression                 go to state 90
    declaration                go to state 91
    declaration_specifiers     go to state 38
    type_specifiers            go to state 14
    statement                  go to state 92
    labeled_statement          go to state 93
    compound_statement         go to state 94
    block_item_list            go to state 95
    block_item                 go to state 96
    expression_statement       go to state 97
    selection_statement        go to state 98
    iteration_statement        go to state 99
    jump_statement             go to state 100


State 36

   84 init_declarator: declarator ASSIGN . initializer

    IDENTIFIER          shift, and go to state 101
    STRING_LITERAL      shift, and go to state 48
    INTEGER_CONSTANT    shift, and go to state 49
    FLOATING_CONSTANT   shift, and go to state 50
    CHARACTER_CONSTANT  shift, and go to state 51
    ZERO_CONSTANT       shift, and go to state 52
    LEFT_CURL           shift, and go to state 102
    PLUS_PLUS           shift, and go to state 54
    MINUS_MINUS         shift, and go to state 55
    '('                 shift, and go to state 68
    '&'                 shift, and go to state 69
    '*'                 shift, and go to state 70
    '+'                 shift, and go to state 71
    '-'                 shift, and go to state 72

    primary_expression         go to state 73
    postfix_expression         go to state 74
    unary_expression           go to state 75
    unary_operator             go to state 76
    cast_expression            go to state 77
    multiplicative_expression  go to state 78
    additive_expression        go to state 79
    shift_expression           go to state 80
    relational_expression      go to state 81
    equality_expression        go to state 82
    and_expression             go to state 83
    exclusive_or_expression    go to state 84
    inclusive_or_expression    go to state 85
    logical_and_expression     go to state 86
    logical_or_expression      go to state 87
    conditional_expression     go to state 88
    assignment_expression      go to state 103
    initializer                go to state 104


State 37

  172 declaration_list: declaration .

    $default  reduce using rule 172 (declaration_list)


State 38

   76 declaration: declaration_specifiers . SCOL
   77            | declaration_specifiers . init_declarator_list SCOL

    IDENTIFIER  shift, and go to state 18
    SCOL        shift, and go to state 19
    '('         shift, and go to state 20
    '*'         shift, and go to state 21

    init_declarator_list  go to state 22
    init_declarator       go to state 23
    declarator            go to state 46
    direct_declarator     go to state 25
    pointer               go to state 26


State 39

  170 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 170 (function_definition)


State 40

  171 function_definition: declaration_specifiers declarator declaration_list . compound_statement
  173 declaration_list: declaration_list . declaration

    LEFT_CURL  shift, and go to state 35
    VOID       shift, and go to state 1
    CHAR       shift, and go to state 2
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    SHORT      shift, and go to state 5
    LONG       shift, and go to state 6
    UNSIGNED   shift, and go to state 7
    SIGNED     shift, and go to state 8
    BOOL       shift, and go to state 9
    MATRIX     shift, and go to state 10
    DOUBLE     shift, and go to state 11

    declaration             go to state 105
    declaration_specifiers  go to state 38
    type_specifiers         go to state 14
    compound_statement      go to state 106


State 41

  102 direct_declarator: direct_declarator '(' . parameter_type_list ')'
  103                  | direct_declarator '(' . ')'
  104                  | direct_declarator '(' . identifier_list ')'

    IDENTIFIER  shift, and go to state 107
    VOID        shift, and go to state 1
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    SHORT       shift, and go to state 5
    LONG        shift, and go to state 6
    UNSIGNED    shift, and go to state 7
    SIGNED      shift, and go to state 8
    BOOL        shift, and go to state 9
    MATRIX      shift, and go to state 10
    DOUBLE      shift, and go to state 11
    ')'         shift, and go to state 108

    declaration_specifiers  go to state 109
    type_specifiers         go to state 14
    parameter_type_list     go to state 110
    parameter_list          go to state 111
    parameter_declaration   go to state 112
    identifier_list         go to state 113


State 42

  100 direct_declarator: direct_declarator '[' . ']'
  101                  | direct_declarator '[' . assignment_expression ']' '[' assignment_expression ']'

    IDENTIFIER          shift, and go to state 101
    STRING_LITERAL      shift, and go to state 48
    INTEGER_CONSTANT    shift, and go to state 49
    FLOATING_CONSTANT   shift, and go to state 50
    CHARACTER_CONSTANT  shift, and go to state 51
    ZERO_CONSTANT       shift, and go to state 52
    PLUS_PLUS           shift, and go to state 54
    MINUS_MINUS         shift, and go to state 55
    '('                 shift, and go to state 68
    ']'                 shift, and go to state 114
    '&'                 shift, and go to state 69
    '*'                 shift, and go to state 70
    '+'                 shift, and go to state 71
    '-'                 shift, and go to state 72

    primary_expression         go to state 73
    postfix_expression         go to state 74
    unary_expression           go to state 75
    unary_operator             go to state 76
    cast_expression            go to state 77
    multiplicative_expression  go to state 78
    additive_expression        go to state 79
    shift_expression           go to state 80
    relational_expression      go to state 81
    equality_expression        go to state 82
    and_expression             go to state 83
    exclusive_or_expression    go to state 84
    inclusive_or_expression    go to state 85
    logical_and_expression     go to state 86
    logical_or_expression      go to state 87
    conditional_expression     go to state 88
    assignment_expression      go to state 115


State 43

   97 declarator: pointer direct_declarator .
  100 direct_declarator: direct_declarator . '[' ']'
  101                  | direct_declarator . '[' assignment_expression ']' '[' assignment_expression ']'
  102                  | direct_declarator . '(' parameter_type_list ')'
  103                  | direct_declarator . '(' ')'
  104                  | direct_declarator . '(' identifier_list ')'

    '('  shift, and go to state 41
    '['  shift, and go to state 42

    $default  reduce using rule 97 (declarator)


State 44

   99 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 99 (direct_declarator)


State 45

   82 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 82 (init_declarator_list)


State 46

   83 init_declarator: declarator .
   84                | declarator . ASSIGN initializer

    ASSIGN  shift, and go to state 36

    $default  reduce using rule 83 (init_declarator)


State 47

    3 primary_expression: IDENTIFIER .
  133 labeled_statement: IDENTIFIER . COL statement

    COL  shift, and go to state 116

    $default  reduce using rule 3 (primary_expression)


State 48

    8 primary_expression: STRING_LITERAL .

    $default  reduce using rule 8 (primary_expression)


State 49

    4 primary_expression: INTEGER_CONSTANT .

    $default  reduce using rule 4 (primary_expression)


State 50

    5 primary_expression: FLOATING_CONSTANT .

    $default  reduce using rule 5 (primary_expression)


State 51

    6 primary_expression: CHARACTER_CONSTANT .

    $default  reduce using rule 6 (primary_expression)


State 52

    7 primary_expression: ZERO_CONSTANT .

    $default  reduce using rule 7 (primary_expression)


State 53

  136 compound_statement: LEFT_CURL RCB .

    $default  reduce using rule 136 (compound_statement)


State 54

   22 unary_expression: PLUS_PLUS . unary_expression

    IDENTIFIER          shift, and go to state 101
    STRING_LITERAL      shift, and go to state 48
    INTEGER_CONSTANT    shift, and go to state 49
    FLOATING_CONSTANT   shift, and go to state 50
    CHARACTER_CONSTANT  shift, and go to state 51
    ZERO_CONSTANT       shift, and go to state 52
    PLUS_PLUS           shift, and go to state 54
    MINUS_MINUS         shift, and go to state 55
    '('                 shift, and go to state 68
    '&'                 shift, and go to state 69
    '*'                 shift, and go to state 70
    '+'                 shift, and go to state 71
    '-'                 shift, and go to state 72

    primary_expression  go to state 73
    postfix_expression  go to state 74
    unary_expression    go to state 117
    unary_operator      go to state 76


State 55

   23 unary_expression: MINUS_MINUS . unary_expression

    IDENTIFIER          shift, and go to state 101
    STRING_LITERAL      shift, and go to state 48
    INTEGER_CONSTANT    shift, and go to state 49
    FLOATING_CONSTANT   shift, and go to state 50
    CHARACTER_CONSTANT  shift, and go to state 51
    ZERO_CONSTANT       shift, and go to state 52
    PLUS_PLUS           shift, and go to state 54
    MINUS_MINUS         shift, and go to state 55
    '('                 shift, and go to state 68
    '&'                 shift, and go to state 69
    '*'                 shift, and go to state 70
    '+'                 shift, and go to state 71
    '-'                 shift, and go to state 72

    primary_expression  go to state 73
    postfix_expression  go to state 74
    unary_expression    go to state 118
    unary_operator      go to state 76


State 56

  142 expression_statement: SCOL .

    $default  reduce using rule 142 (expression_statement)


State 57

  163 jump_statement: BREAK . SCOL

    SCOL  shift, and go to state 119


State 58

  164 jump_statement: RETURN . SCOL
  165               | RETURN . expression SCOL

    IDENTIFIER          shift, and go to state 101
    STRING_LITERAL      shift, and go to state 48
    INTEGER_CONSTANT    shift, and go to state 49
    FLOATING_CONSTANT   shift, and go to state 50
    CHARACTER_CONSTANT  shift, and go to state 51
    ZERO_CONSTANT       shift, and go to state 52
    PLUS_PLUS           shift, and go to state 54
    MINUS_MINUS         shift, and go to state 55
    SCOL                shift, and go to state 120
    '('                 shift, and go to state 68
    '&'                 shift, and go to state 69
    '*'                 shift, and go to state 70
    '+'                 shift, and go to state 71
    '-'                 shift, and go to state 72

    primary_expression         go to state 73
    postfix_expression         go to state 74
    unary_expression           go to state 75
    unary_operator             go to state 76
    cast_expression            go to state 77
    multiplicative_expression  go to state 78
    additive_expression        go to state 79
    shift_expression           go to state 80
    relational_expression      go to state 81
    equality_expression        go to state 82
    and_expression             go to state 83
    exclusive_or_expression    go to state 84
    inclusive_or_expression    go to state 85
    logical_and_expression     go to state 86
    logical_or_expression      go to state 87
    conditional_expression     go to state 88
    assignment_expression      go to state 89
    expression                 go to state 121


State 59

  144 selection_statement: IF . '(' expression ')' M statement
  145                    | IF . '(' expression ')' M statement N ELSE M statement

    '('  shift, and go to state 122


State 60

  148 iteration_statement: DO . M statement M WHILE '(' expression ')'

    $default  reduce using rule 1 (M)

    M  go to state 123


State 61

  146 selection_statement: SWITCH . '(' expression ')' statement

    '('  shift, and go to state 124


State 62

  161 jump_statement: GOTO . IDENTIFIER SCOL

    IDENTIFIER  shift, and go to state 125


State 63

  134 labeled_statement: CASE . constant_expression COL statement
